--- a/mandrill.cabal
+++ b/mandrill.cabal
@@ -35,21 +35,21 @@ library
     Network.API.Mandrill.HTTP
   -- other-extensions:
   build-depends:
-      base >=4.6 && < 5
-    , containers >= 0.5.0.0
-    , bytestring >= 0.9.0
-    , base64-bytestring >= 1.0.0.1
-    , text >= 1.0.0.0 && < 3
-    , http-types >= 0.8.0
-    , http-client >= 0.3.0
-    , http-client-tls >= 0.2.0.0
+      base 
+    , containers 
+    , bytestring 
+    , base64-bytestring 
+    , text 
+    , http-types 
+    , http-client 
+    , http-client-tls 
     , aeson 
-    , microlens-th >= 0.4.0.0
-    , blaze-html >= 0.5.0.0
-    , QuickCheck >= 2.6 && < 3.0
-    , mtl < 3.0
+    , microlens-th 
+    , blaze-html 
+    , QuickCheck 
+    , mtl 
     , time
-    , email-validate >= 1.0.0
+    , email-validate 
     , old-locale
     , unordered-containers
   hs-source-dirs:
@@ -79,8 +79,8 @@ test-suite mandrill-tests
     , aeson
     , bytestring
     , QuickCheck
-    , tasty >= 0.9.0.1
+    , tasty 
     , tasty-quickcheck
     , tasty-hunit
-    , raw-strings-qq < 1.2
+    , raw-strings-qq 
     , text
